src/styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");

/* Tailwind directives */
@tailwind base;
@tailwind components;
@tailwind utilities;

/* !CSS_RESET */
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul,
ol,
li {
  list-style: none;
}

/* remove anchor link default styles */
a {
  text-decoration: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

/* Set core body defaults */
body {
  text-rendering: optimizeSpeed;
  line-height: 1.5;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

/* Global Settings */
:root {
  font-family: "Poppins", sans-serif;
  font-size: 16px;
  font-weight: 400;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
}

/* Global Classes */

@layer base {
  * {
    @apply focus:outline-brown;
  }

  a {
    @apply font-medium text-sm lg:text-base;
  }

  h1 {
    @apply font-medium text-2xl lg:text-5xl leading-normal;
  }

  h2 {
    @apply font-medium text-xl lg:text-4xl leading-snug;
  }

  p {
    @apply font-normal text-xs lg:text-base;
  }
}

/* Components Classes */
@layer components {
  .btn {
    @apply py-2.5 px-5 rounded-lg cursor-pointer font-semibold text-xs lg:text-base hover:brightness-90 hover:delay-75;
  }

  .btn-primary {
    @apply bg-brown text-white;
  }

  .btn-accent {
    @apply bg-none text-brown border-2 border-brown;
  }

  .btn-primary-w {
    @apply bg-white text-brown;
  }

  .btn-accent-w {
    @apply bg-none text-white border-2 border-white;
  }

  .link {
    @apply font-medium text-sm lg:text-base;
  }
}

/* Utils */
@layer utilities {
  .f-col {
    @apply flex flex-col;
  }

  .f-center {
    @apply flex justify-center items-center;
  }

  .f-between {
    @apply flex justify-between;
  }

  .f-around {
    @apply flex justify-around;
  }

  .f-evenly {
    @apply flex justify-evenly;
  }
}

